--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,5 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
 @theme inline {
   --color-background: var(--background);
@@ -18,6 +14,48 @@
     --foreground: #ededed;
   }
 }
+
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-marquee {
+  display: flex;
+  width: 200%;              /* 2 copies ek hi line me */
+  animation: marquee 3s linear infinite;
+}
+/* .clip-hex {
+clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+} */
+ @keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+
+
+.hexagon {
+  -webkit-mask-image: url('/4.png');
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  -webkit-mask-size: contain;
+
+  mask-image: url('/Rounded Hexagon PNGs.webp');
+  mask-repeat: no-repeat;
+  mask-position: center;
+  mask-size: contain;
+}
+
 
 body {
   background: var(--background);
